.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SkyEditor2__SkyEditorDummy__c.object
<CustomObject>
    <fields>
        <fullName>SkyEditor2__Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Event_EndDate__c</fullName>
        <description>EndDate(Event)</description>
        <label>End Date Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Event_EndTime__c</fullName>
        <description>EndTime(Event)</description>
        <label>End Date Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Event_StartDate__c</fullName>
        <description>StartDate(Event)</description>
        <label>Start Date Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Event_StartTime__c</fullName>
        <description>StartTime(Event)</description>
        <label>Start Date Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Html__c</fullName>
        <label>Html</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__IsError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__IsTextError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTextError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__IsURLError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsURLError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__LongTextArea__c</fullName>
        <label>LongTextArea</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__MultiselectPicklist__c</fullName>
        <label>MultiselectPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>SkyEditor2__SkyEditorDummy__c</referenceTo>
        <relationshipLabel>SkyEditorDummy</relationshipLabel>
        <relationshipName>SkyEditor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__Textarea__c</fullName>
        <label>Textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>SkyEditorDummy</label>
    <listViews>
        <fullName>SkyEditor2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>SkyEditor2__RecordType1</fullName>
        <active>true</active>
        <label>RecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>SkyEditor2__RecordType2</fullName>
        <active>true</active>
        <label>RecordType2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SkyEditor2__TEST_ERROR1</fullName>
        <active>true</active>
        <errorConditionFormula>SkyEditor2__IsError__c</errorConditionFormula>
        <errorMessage>test message.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SkyEditor2__TEST_ERROR2</fullName>
        <active>true</active>
        <errorConditionFormula>SkyEditor2__IsTextError__c</errorConditionFormula>
        <errorDisplayField>SkyEditor2__Text__c</errorDisplayField>
        <errorMessage>test message.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SkyEditor2__TEST_ERROR3</fullName>
        <active>true</active>
        <errorConditionFormula>SkyEditor2__IsURLError__c</errorConditionFormula>
        <errorDisplayField>SkyEditor2__URL__c</errorDisplayField>
        <errorMessage>test message.</errorMessage>
    </validationRules>
</CustomObject>